--- a/index.css
+++ b/index.css
@@ -17,7 +17,9 @@ header {
   list-style: none;
   padding: 0px;
   padding-left: 5%;
+  font-weight: bolder;
 }
+
 nav {
   display: flex;
   flex-direction: row;
@@ -34,6 +36,10 @@ header h1 {
   background: none;
   font-family: "Quicksand", sans-serif;
   font-size: 16px;
+}
+#main img {
+  width: 100%;
+  height: 80%;
 }
 /* footer*/
 a {
