--- a/index.css
+++ b/index.css
@@ -58,10 +58,10 @@ header h1 {
   color: white;
   background-color: rgba(0, 0, 0, 0.1);
   box-shadow: rgba(246, 248, 249, 0.9) 0px 8px 24px;
-  text-shadow: 0 0 10px #ffffff;
+  text-shadow: 0 0 10px black
   border-radius: 10px;
   font-family: "Josefin Sans", sans-serif;
-
+  font-size: 30px;
   padding: 5% 10%;
 }
 /* footer*/
@@ -118,6 +118,14 @@ footer {
   bottom: 0px;
   width: 100%;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#copyright {
+  font-size: 12px;
+  color: grey;
+  font-family: "Quicksand", sans-serif;
 }
 #noBorderFooterEl {
   border-right: none;
@@ -125,13 +133,13 @@ footer {
 .details {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   font-family: "Quicksand", sans-serif;
+  font-size: 14px;
 }
 .details p {
   color: gray;
-  padding: 1%;
+  padding: 5px;
   border-right: 1px solid gray;
 }
