--- a/index.css
+++ b/index.css
@@ -20,19 +20,23 @@ header {
   padding-left: 5%;
   font-weight: bolder;
 }
+nav a {
+  color: rgb(76, 76, 76);
+  font-weight: bolder;
+}
 
 nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  position: absolute;
   position: sticky;
 }
 header h1 {
   text-align: center;
   margin: 0px;
-  font-weight: bolder;
+  color: rgb(76, 76, 76);
+  /* font-weight: bolder; */
 }
 #booknow {
   padding-right: 5%;
@@ -40,6 +44,7 @@ header h1 {
   background: none;
   font-family: "Quicksand", sans-serif;
   font-size: 16px;
+  list-style: none;
 }
 #mainImg img {
   width: 100%;
@@ -56,9 +61,9 @@ header h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(243, 237, 237, 0.7);
   box-shadow: rgba(246, 248, 249, 0.9) 0px 8px 24px;
-  text-shadow: 0 0 10px black
+  text-shadow: 0 0 10px rgb(98, 98, 98);
   border-radius: 10px;
   font-family: "Josefin Sans", sans-serif;
   font-size: 30px;
