--- a/index.css
+++ b/index.css
@@ -129,6 +129,8 @@ a {
 }
 
 footer {
+  position: fixed;
+  left: 0;
   bottom: 0px;
   width: 100%;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -307,4 +309,48 @@ footer {
 .shortDescription {
   font-weight: bolder;
   font-size: 18px;
+}
+
+.containerAbout .about {
+  font-family: "Quicksand", sans-serif;
+  width: 40%;
+  border-left: 2px solid gray;
+  padding: 5%;
+}
+
+.containerAbout {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 5% 10%;
+  align-items: flex-start;
+}
+
+.containerAbout img {
+  width: 30%;
+  height: 30%;
+  box-shadow: 0px 0px 57px -22px rgba(202, 75, 75, 1);
+}
+
+.imagesAbout {
+  width: 40%;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+#img1 {
+  width: 80%;
+  position: relative;
+  top: 0;
+  left: 0;
+  box-shadow: 0px 0px 57px -22px rgba(202, 75, 75, 1);
+}
+#img2 {
+  width: 40%;
+  height: 60%;
+  position: absolute;
+  top: 200px;
+  left: 200px;
+  box-shadow: 0px 0px 57px -22px rgba(202, 75, 75, 1);
 }
